--- a/Conjugate/en.lproj/Localizable.strings
+++ b/Conjugate/en.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "mobile.ios.conjugate.error.conjugationNotFound" = "The verb could not be conjugated";
 "mobile.ios.conjugate.error.serverError" = "There was a problem with the server. Please try again";
 "mobile.ios.conjugate.error.genericError" = "There was an unknown problem. Please try again";
+"mobile.ios.conjugate.error.noEmailSetup" = "You don't have an email account setup.";
 
 "mobile.ios.conjugate.tense.present" = "Präsens";
 "mobile.ios.conjugate.tense.past" = "Präteritum";
@@ -28,4 +29,10 @@
 
 "mobile.ios.conjugate.verbSaved" = "The verb has been saved.";
 "mobile.ios.conjugate.verbDeleted" = "The verb has been deleted.";
+
+"mobile.ios.conjugate.settings.reportBug" = "Report a bug";
+"mobile.ios.conjugate.settings.sendFeedback" = "Send Feedback";
+"mobile.ios.conjugate.settings.share" = "Tell a Friend";
+
+
 
