added a rate us button to settings

--- a/Conjugate/en.lproj/Localizable.strings
+++ b/Conjugate/en.lproj/Localizable.strings
@@ -33,6 +33,7 @@
 "mobile.ios.conjugate.settings.reportBug" = "Report a bug";
 "mobile.ios.conjugate.settings.sendFeedback" = "Send Feedback";
 "mobile.ios.conjugate.settings.share" = "Tell a Friend";
+"mobile.ios.conjugate.settings.rate" = "Rate us ⭐️";
 
 
 
