--- a/Conjugate/en.lproj/Localizable.strings
+++ b/Conjugate/en.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "mobile.ios.conjugate.error.genericError" = "There was an unknown problem. Please try again";
 "mobile.ios.conjugate.error.noEmailSetup" = "You don't have an email account setup.";
 "mobile.ios.conjugate.error.networkUnavailable" = "You don't have internet connection.";
-"mobile.ios.conjugate.error.noSavedVerbs" = "You don't have any saved verbs.";
+"mobile.ios.conjugate.error.noSavedVerbs" = "No verbs have been saved yet.";
 
 "mobile.ios.conjugate.tense.present" = "Präsens";
 "mobile.ios.conjugate.tense.past" = "Präteritum";
