--- a/Conjugate/en.lproj/Localizable.strings
+++ b/Conjugate/en.lproj/Localizable.strings
@@ -41,5 +41,8 @@
 "mobile.ios.conjugate.settings.share" = "Tell a Friend";
 "mobile.ios.conjugate.settings.rate" = "Rate us";
 
+"mobile.ios.conjugate.languageSelection.conjugation" = "Conjugation Language";
+"mobile.ios.conjugate.languageSelection.translation" = "Translation Language";
+
 
 
