--- a/Conjugate/en.lproj/Localizable.strings
+++ b/Conjugate/en.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 
 "mobile.ios.conjugate.languageSelection.conjugation" = "Conjugation Language";
 "mobile.ios.conjugate.languageSelection.translation" = "Translation Language";
+"mobile.ios.conjugate.languageSelection.apply" = "Apply";
 
 
 
