Handle language selection in onboarding

--- a/Conjugate/en.lproj/Localizable.strings
+++ b/Conjugate/en.lproj/Localizable.strings
@@ -34,6 +34,6 @@
 "mobile.ios.conjugate.languageSelection.apply" = "Apply";
 "mobile.ios.conjugate.languageSelection.continue" = "Continue";
 
-"mobile.ios.conjugate.onboarding.description" = "Please select a language you want to conjugate in";
+"mobile.ios.conjugate.onboarding.description" = "Please select ther language you want to conjugate in";
 
 
