--- a/Conjugate/Language-de.strings
+++ b/Conjugate/Language-de.strings
@@ -20,3 +20,5 @@
 "mobile.ios.conjugate.tenseGroup.indicative" = "Indikativ";
 "mobile.ios.conjugate.tenseGroup.subjunctive" = "Konjunktiv";
 "mobile.ios.conjugate.tenseGroup.imperative" = "Imperative";
+
+"mobile.ios.conjugate.verb.welcome" = "begrüßen";
