typo in the verb boire

--- a/Conjugate/Language-fr.strings
+++ b/Conjugate/Language-fr.strings
@@ -18,7 +18,7 @@
 "mobile.ios.conjugate.tense.preterite2" = "Passé antérieur";
 
 
-"mobile.ios.conjugate.searchPlaceholderVerbs" = "bois,ai";
+"mobile.ios.conjugate.searchPlaceholderVerbs" = "boire,ai";
 
 "mobile.ios.conjugate.tenseGroup.indicative" = "Indicatif";
 "mobile.ios.conjugate.tenseGroup.subjunctive" = "Subjonctif";
