use a better french welcome verb

--- a/Conjugate/Language-fr.strings
+++ b/Conjugate/Language-fr.strings
@@ -23,4 +23,4 @@
 "mobile.ios.conjugate.tenseGroup.subjunctive" = "Subjonctif";
 "mobile.ios.conjugate.tenseGroup.imperative" = "Imperatif";
 
-"mobile.ios.conjugate.verb.welcome" = "recevoir";
+"mobile.ios.conjugate.verb.welcome" = "saluer";
