corrected the Farsi sample verb

--- a/Conjugate/Language Files/Language-fa.strings
+++ b/Conjugate/Language Files/Language-fa.strings
@@ -6,4 +6,4 @@
   Copyright © 2017 Adel  Shehadeh. All rights reserved.
 */
 
-"mobile.ios.conjugate.searchPlaceholderVerbs" = "خواندن,نوشیدن";
+"mobile.ios.conjugate.searchPlaceholderVerbs" = "خواندن,داشتن";
